move players setup to backend

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
 
 
     let players = [];
-    players.push({ id: 0, style: "rgb(200, 200, 200)" });
+   /* players.push({ id: 0, style: "rgb(200, 200, 200)" });
     players.push({ id: 1, x: GRID_SIZE / 4, y: GRID_SIZE / 4, style: "#ce4bf1", headColor: "rgb(50,200,200)", move: 0 });
     players.push({ id: 2, x: 3 * GRID_SIZE / 4, y: 3 * GRID_SIZE / 4, style: "#93d2f3", headColor: "rgb(50,200,60)", move: 0 });
     players.push({ id: 3, x: 3 * GRID_SIZE / 4, y: 3 * GRID_SIZE / 4, style: "#ff83eb", headColor: "rgb(0,0,0)", move: 0 });
-
-
+*/
     function draw() {
       var canvas = document.getElementById('canvas');
       if (canvas.getContext) {
