--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,14 @@
 
 <head>
   <title>GridWars</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="public/favicon_16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="public/favicon_32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="public/favicon_96x96.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="public/favicon_192x192.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="public/favicon_57x57.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="public/favicon_72x72.png">
+
+
   <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script>
   <script src="https://unpkg.com/vuex@3.6.2/dist/vuex.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
